--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="nav-bar">
         <div class="brand">
           <a href="#hero">
-            <h1><span>S</span>haif <span>A</span>rfan</h1>
+            <h1><span>B</span>alimwacha <span>B</span>etuel</h1>
           </a>
         </div>
         <div class="nav-list">
@@ -24,8 +24,8 @@
           </div>
           <ul>
             <li><a href="#hero" data-after="Home">Home</a></li>
-            <li><a href="#services" data-after="Service">Services</a></li>
-            <li><a href="#projects" data-after="Projects">Projects</a></li>
+            <li><a href="#services" data-after="Service">Skills</a></li>
+            <!--<li><a href="#projects" data-after="Projects">Projects</a></li>-->
             <li><a href="#about" data-after="About">About</a></li>
             <li><a href="#contact" data-after="Contact">Contact</a></li>
           </ul>
@@ -40,48 +40,80 @@
   <section id="hero">
     <div class="hero container">
       <div>
-        <h1>Hello, <span></span></h1>
-        <h1>My Name is <span></span></h1>
-        <h1>Arfan <span></span></h1>
-        <a href="#projects" type="button" class="cta">Portfolio</a>
+        <h1>Hey there; <span></span></h1>
+        <h1>I'm <span></span></h1>
+        <h1>Betuel <span></span></h1>
+        <!--<h1>Let's interact...</h1> -->
+        <!--<a href="#projects" type="button" class="cta">Portfolio</a>-->
       </div>
     </div>
   </section>
-  <!-- End Hero Section  -->
+  <!-- End Hero Section  --> 
+  <section id="about">
+    <div class="about container">
+      <div class="col-left">
+        <div class="about-img">
+          <img src="./img/img-2.png" alt="img">
+        </div>
+      </div>
+      <div class="col-right">
+        <h1 class="section-title">About <span>me</span></h1>
+        <h2>Mechatronics enthusiast</h2>
+        <p>Engineering is our path toward grasping a little more God,how he thinks and go about things... 
+          And we're still really far behind him.Our interest for Engineering has to be  more of a vocation than a 
+          passion and the only way to respond accurately to that vocation is to learn restlessly.
+          I'm doing a degree in Mechatronics Engineering in JKUAT ...Through the knowledge acquired at school 
+          ,my contact with industries:GearBox,Vodacom... and active participation in various open-source project
+          i'm aiming at building solid skills which i will rely on to bring real change to our society.
+          </p>
+         <!--<a href="#" class="cta">Download Resume</a>-->
+      </div>
+    </div>
+  </section>
+  <!-- End About Section -->
+
 
   <!-- Service Section -->
   <section id="services">
     <div class="services container">
       <div class="service-top">
-        <h1 class="section-title">Serv<span>i</span>ces</h1>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum deleniti maiores pariatur assumenda quas
-          magni et, doloribus quod voluptate quasi molestiae magnam officiis dolorum, dolor provident atque molestias
-          voluptatum explicabo!</p>
+        <h1 class="section-title">Sk<span>i</span>lls</h1>
+        <p>
+          Learning is an everlasting process...Altough still
+          learning,here below are some of the fields whereby trough practices i have acquired
+          a strong understanding of fundementals:</p>
       </div>
       <div class="service-bottom">
         <div class="service-item">
           <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" /></div>
-          <h2>Web Design</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis debitis rerum, magni voluptatem sed
-            architecto placeat beatae tenetur officia quod</p>
+          <h2>Computer Aided Design</h2>
+          <p> Using Autodesk Fusion360, i have been able to come up with various designs and exploring 
+            others features of the software such as:Manufacturing,Simulation...
+            Now looking forward to learning Human-centered Design and CATIA</p>
         </div>
         <div class="service-item">
           <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" /></div>
-          <h2>Web Design</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis debitis rerum, magni voluptatem sed
-            architecto placeat beatae tenetur officia quod</p>
+          <h2>PCB Design</h2>
+          <p>Thanks to Autodesk,PCB Design is not only an occasion to bring changes to the electroning
+            manufacturing industry but also to test your creavity,there's a lot that can be done with its
+            Softwares such as:Eagle,Fusion360
+             </p>
         </div>
         <div class="service-item">
           <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" /></div>
-          <h2>Web Design</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis debitis rerum, magni voluptatem sed
-            architecto placeat beatae tenetur officia quod</p>
+          <h2>Internet of Things</h2>
+          <p>I have interacted with various microcontrollers:Raspberry Pi,ESP32,Arduino if you join those microcontrollers
+            with sensors,a bit of coding,skills regarding Cloud and Protocol you can came up with mindblowing IoT applications.
+            </p>
         </div>
         <div class="service-item">
           <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" /></div>
-          <h2>Web Design</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis debitis rerum, magni voluptatem sed
-            architecto placeat beatae tenetur officia quod</p>
+          <h2>Machine Learning</h2>
+           
+          <p>Machine Learning is the new fuel of our century,it's more than Crucial to have a understanding of
+            various concepts it lies on:CNN,Transformers...Thanks to GearBox i have gained skills in Ml using TensorFlow 
+           and OpenCV
+            </p>
         </div>
       </div>
     </div>
@@ -89,7 +121,7 @@
   <!-- End Service Section -->
 
   <!-- Projects Section -->
-  <section id="projects">
+  <!--<section id="projects">
     <div class="projects container">
       <div class="projects-header">
         <h1 class="section-title">Recent <span>Projects</span></h1>
@@ -160,27 +192,7 @@
   </section>
   <!-- End Projects Section -->
 
-  <!-- About Section -->
-  <section id="about">
-    <div class="about container">
-      <div class="col-left">
-        <div class="about-img">
-          <img src="./img/img-2.png" alt="img">
-        </div>
-      </div>
-      <div class="col-right">
-        <h1 class="section-title">About <span>me</span></h1>
-        <h2>Front End Developer</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores, velit alias eius non illum beatae atque
-          repellat ratione qui veritatis repudiandae adipisci maiores. At inventore necessitatibus deserunt
-          exercitationem cumque earum omnis ipsum rem accusantium quis, quas quia, accusamus provident suscipit magni!
-          Expedita sint ad dolore, commodi labore nihil velit earum ducimus nulla quae nostrum fugit aut, deserunt
-          reprehenderit libero enim!</p>
-        <a href="#" class="cta">Download Resume</a>
-      </div>
-    </div>
-  </section>
-  <!-- End About Section -->
+
 
   <!-- Contact Section -->
   <section id="contact">
@@ -193,23 +205,23 @@
           <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/phone.png" /></div>
           <div class="contact-info">
             <h1>Phone</h1>
-            <h2>+1 234 123 1234</h2>
-            <h2>+1 234 123 1234</h2>
+            <h2>+254114677971</h2>
+            <h2>+243993276937</h2>
           </div>
         </div>
         <div class="contact-item">
           <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/new-post.png" /></div>
           <div class="contact-info">
             <h1>Email</h1>
-            <h2>info@gmail.com</h2>
-            <h2>abcd@gmail.com</h2>
+            <h2>balimwachabetuel@gmail.com</h2>
+            <h2>basukira.balimwacha@students.jkuat.ac.ke</h2>
           </div>
         </div>
         <div class="contact-item">
           <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/map-marker.png" /></div>
           <div class="contact-info">
             <h1>Address</h1>
-            <h2>Fatikchhari, Chittagong, Bangladesh</h2>
+            <h2>JKUAT,Nairobi,Kenya</h2>
           </div>
         </div>
       </div>
@@ -221,24 +233,24 @@
   <section id="footer">
     <div class="footer container">
       <div class="brand">
-        <h1><span>S</span>haif <span>A</span>rfan</h1>
+        <h1><span>B</span>alimwacha<span>B</span>etuel</h1>
       </div>
-      <h2>Your Complete Web Solution</h2>
+      <h2>Reach out to me via:</h2>
       <div class="social-icon">
         <div class="social-item">
-          <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/facebook-new.png" /></a>
+          <a href="https://www.linkedin.com/in/balimwacha-betuel-76b560237"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/ca/LinkedIn_logo_initials.png/640px-LinkedIn_logo_initials.png" /></a>
         </div>
         <div class="social-item">
-          <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/instagram-new.png" /></a>
+          <a href="https://github.com/BBetuel"><img src="https://cdn-icons-png.flaticon.com/512/25/25231.png"></a>
         </div>
         <div class="social-item">
-          <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/twitter.png" /></a>
+          <a href="https://www.instagram.com/betuel_balimwacha/"><img src="https://img.icons8.com/bubbles/100/000000/instagram-new.png" /></a>
         </div>
-        <div class="social-item">
-          <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/behance.png" /></a>
-        </div>
+        <!--<div class="social-item">
+          <a href="https://www.instagram.com/betuel_balimwacha/"><img src="https://img.icons8.com/bubbles/100/000000/behance.png" /></a>
+        </div> -->
       </div>
-      <p>Copyright © 2020 Arfan. All rights reserved</p>
+      <!--<p>Copyright © 2020 Arfan. All rights reserved</p>
     </div>
   </section>
   <!-- End Footer -->
